# cloudcheck-rs

./: .gitignore  Cargo.toml  README.md  future_plans.md
src/: ai.rs  aws.rs  cli.rs  error.rs  lib.rs  main.rs  output.rs
src/aws/: client.rs  mod.rs
src/checks/: bedrock.rs  events.rs  iam.rs  lambda.rs  mod.rs  s3.rs  vpc.rs
src/cli/: mod.rs
src/config/: default.toml  mod.rs  settings.rs
src/llm/: client.rs  mod.rs  structs.rs
src/output/: formatter.rs  mod.rs
src/scanner/: iam_scanner.rs  mod.rs  s3_scanner.rs  types.rs
src/types/: finding.rs  mod.rs
