[package]
name = "cloudcheck-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
aws-config = "0.56"
aws-sdk-iam = "0.32"
aws-sdk-s3 = "0.32"
aws-sdk-lambda = "0.32"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tabled = "0.14"
reqwest = { version = "0.11", features = ["json"] }  # for GPT/AI
anyhow = "1.0"
aws-types = "1.3.7"
tokio = { version = "1", features = ["full"] }
async-openai = "0.14"
urlencoding = "2.1.3"
aws-sdk-bedrock = "1.94.0"
aws-sdk-cloudwatch = "1.77.0"
aws-sdk-ec2 = "1.136.0"
